# Socket-Image

./: Makefile  README.md  client  client.cpp  server  server.cpp  server.py
example/: CMakeLists.txt  Communication.cpp  Communication.py  main.cpp  server.py
socket_lib/: CMakeLists.txt  Communication.cpp  Communication.h  Communication.py  main.cpp  server_main.py
